--- a/index.html
+++ b/index.html
@@ -10,17 +10,54 @@
   <div class="header">
     <div class="header-contain">
     <div class="header-l">
+      <div class="logo">
         <svg class="_2m4hn" version="1.1" viewBox="0 0 32 32" width="32" height="32" aria-labelledby="unsplash-home" aria-hidden="false"><title id="unsplash-home">Unsplash Home</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg>
+      </div>
         <div class="header-l-font">
         <span class="uns">Unsplash</span>
         <span>Photos for everyone</span>
       </div>
     
     <form class="search">
-      <input type="text">
+      <div class="sousuo">
+        <svg class="_2-tlh _1azRR _1mPD6" version="1.1" viewBox="0 0 32 32" width="32" height="32" aria-hidden="false"><path d="M31 28.64l-7.57-7.57a12.53 12.53 0 1 0-2.36 2.36l7.57 7.57zm-17.5-6a9.17 9.17 0 1 1 6.5-2.64 9.11 9.11 0 0 1-6.5 2.67z"></path></svg>
+      </div>
+      <input type="text" placeholder="Search free high-resolution photos">
     </form>
   </div>
   </div>
+</div>
+<div class="nav">
+  <div class="nav-left">
+    <ul class="edi">
+      <li><a href="#">
+        <span>Editorial</span>
+      </a></li>
+    </ul>
+  </div>
+  <div class="line"></div>
+  <div class="nav-right">
+    <ul>
+      <li>Wallpapers</li>
+      <li>Textures & Patterns</li>
+      <li>Nature</li>
+      <li>Current Events</li>
+      <li>Architecture</li>
+      <li>Business & Work</li>
+      <li>Film</li>
+      <li>Animals</li>
+      <li>Travel</li>
+      <li>Fashion</li>
+      <li>Food & Drink</li>
+      <li>Spirituality</li>
+      <li>Experimental</li>
+      <li>People</li>
+      <li>Health</li>
+    </ul>
+  </div>
+</div>
+<div class="Bigimg">
+  <img src="./images/Bigimg.jpg" alt="">
 </div>
 </body>
 </html>
