修改大图部分文字

--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
       <input type="text" placeholder="Search free high-resolution photos">
     </form>
   </div>
+  <div class="header-r">
+    <ul>
+      <li><a href="#" class="en">Collections</a></li>
+      <li><a href="#" class="en">Explore</a></li>
+      <li><svg class="_3DJPT" version="1.1" viewBox="0 0 32 32" width="32" height="32" aria-hidden="false"><path d="M7 15.5c0 1.9-1.6 3.5-3.5 3.5s-3.5-1.6-3.5-3.5 1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5zm21.5-3.5c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zm-12.5 0c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5z"></path></svg></li>
+    </ul>
+  </div>
+  <div class="but">
+    <button>Submit a photo</button>
+  </div>
+  <div class="line-s"></div>
+  </div>
+  <div class="login">
+    <a href="#" class="log">Login</a>
+    <div class="join"><a href="#" class="free">Join free</a></div>
   </div>
 </div>
 <div class="nav">
@@ -58,6 +73,14 @@
 </div>
 <div class="Bigimg">
   <img src="./images/Bigimg.jpg" alt="">
+  <div class="center">
+    <span class="unsplash">Unsplash</span>
+    <div>
+      <h1>The internet’s source of freely usable images.</h1>
+      <p>Powered by creators everywhere.</p>
+      <div class="input-s"></div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
