--- a/index.html
+++ b/index.html
@@ -1,86 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/base.css">
 </head>
+
 <body>
   <div class="header">
     <div class="header-contain">
-    <div class="header-l">
-      <div class="logo">
-        <svg class="_2m4hn" version="1.1" viewBox="0 0 32 32" width="32" height="32" aria-labelledby="unsplash-home" aria-hidden="false"><title id="unsplash-home">Unsplash Home</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg>
-      </div>
+      <div class="header-l">
+        <div class="logo">
+          <svg class="_2m4hn" version="1.1" viewBox="0 0 32 32" width="32" height="32" aria-labelledby="unsplash-home"
+            aria-hidden="false">
+            <title id="unsplash-home">Unsplash Home</title>
+            <path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path>
+          </svg>
+        </div>
         <div class="header-l-font">
-        <span class="uns">Unsplash</span>
-        <span>Photos for everyone</span>
+          <span class="uns">Unsplash</span>
+          <span>Photos for everyone</span>
+        </div>
+
+        <form class="search" tabindex="1">
+          <div class="sousuo">
+            <svg class="_2-tlh _1azRR _1mPD6" version="1.1" viewBox="0 0 32 32" width="32" height="32"
+              aria-hidden="false">
+              <path
+                d="M31 28.64l-7.57-7.57a12.53 12.53 0 1 0-2.36 2.36l7.57 7.57zm-17.5-6a9.17 9.17 0 1 1 6.5-2.64 9.11 9.11 0 0 1-6.5 2.67z">
+              </path>
+            </svg>
+          </div>
+          <input type="text" placeholder="Search free high-resolution photos">
+        </form>
       </div>
-    
-    <form class="search">
-      <div class="sousuo">
-        <svg class="_2-tlh _1azRR _1mPD6" version="1.1" viewBox="0 0 32 32" width="32" height="32" aria-hidden="false"><path d="M31 28.64l-7.57-7.57a12.53 12.53 0 1 0-2.36 2.36l7.57 7.57zm-17.5-6a9.17 9.17 0 1 1 6.5-2.64 9.11 9.11 0 0 1-6.5 2.67z"></path></svg>
+      <div class="header-r">
+        <ul>
+          <li><a href="#" class="en">Collections</a></li>
+          <li><a href="#" class="en">Explore</a></li>
+          <li><svg class="_3DJPT" version="1.1" viewBox="0 0 32 32" width="32" height="32" aria-hidden="false">
+              <path
+                d="M7 15.5c0 1.9-1.6 3.5-3.5 3.5s-3.5-1.6-3.5-3.5 1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5zm21.5-3.5c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zm-12.5 0c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5z">
+              </path>
+            </svg></li>
+        </ul>
       </div>
-      <input type="text" placeholder="Search free high-resolution photos">
-    </form>
-  </div>
-  <div class="header-r">
-    <ul>
-      <li><a href="#" class="en">Collections</a></li>
-      <li><a href="#" class="en">Explore</a></li>
-      <li><svg class="_3DJPT" version="1.1" viewBox="0 0 32 32" width="32" height="32" aria-hidden="false"><path d="M7 15.5c0 1.9-1.6 3.5-3.5 3.5s-3.5-1.6-3.5-3.5 1.6-3.5 3.5-3.5 3.5 1.6 3.5 3.5zm21.5-3.5c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5zm-12.5 0c-1.9 0-3.5 1.6-3.5 3.5s1.6 3.5 3.5 3.5 3.5-1.6 3.5-3.5-1.6-3.5-3.5-3.5z"></path></svg></li>
-    </ul>
-  </div>
-  <div class="but">
-    <button>Submit a photo</button>
-  </div>
-  <div class="line-s"></div>
-  </div>
-  <div class="login">
-    <a href="#" class="log">Login</a>
-    <div class="join"><a href="#" class="free">Join free</a></div>
-  </div>
-</div>
-<div class="nav">
-  <div class="nav-left">
-    <ul class="edi">
-      <li><a href="#">
-        <span>Editorial</span>
-      </a></li>
-    </ul>
-  </div>
-  <div class="line"></div>
-  <div class="nav-right">
-    <ul>
-      <li>Wallpapers</li>
-      <li>Textures & Patterns</li>
-      <li>Nature</li>
-      <li>Current Events</li>
-      <li>Architecture</li>
-      <li>Business & Work</li>
-      <li>Film</li>
-      <li>Animals</li>
-      <li>Travel</li>
-      <li>Fashion</li>
-      <li>Food & Drink</li>
-      <li>Spirituality</li>
-      <li>Experimental</li>
-      <li>People</li>
-      <li>Health</li>
-    </ul>
-  </div>
-</div>
-<div class="Bigimg">
-  <img src="./images/Bigimg.jpg" alt="">
-  <div class="center">
-    <span class="unsplash">Unsplash</span>
-    <div>
-      <h1>The internet’s source of freely usable images.</h1>
-      <p>Powered by creators everywhere.</p>
-      <div class="input-s"></div>
+      <div class="but">
+        <button>Submit a photo</button>
+      </div>
+      <div class="line-s"></div>
+    </div>
+    <div class="login">
+      <a href="#" class="log">Login</a>
+      <div class="join"><a href="#" class="free">Join free</a></div>
     </div>
   </div>
-</div>
+  <div class="nav">
+    <div class="nav-left">
+      <ul class="edi">
+        <li><a href="#">
+            <span style="font-size:14px">Editorial</span>
+          </a></li>
+      </ul>
+    </div>
+    <div class="line"></div>
+    <div class="nav-right">
+      <ul>
+        <li>Wallpapers</li>
+        <li>Textures & Patterns</li>
+        <li>Nature</li>
+        <li>Current Events</li>
+        <li>Architecture</li>
+        <li>Business & Work</li>
+        <li>Film</li>
+        <li>Animals</li>
+        <li>Travel</li>
+        <li>Fashion</li>
+        <li>Food & Drink</li>
+        <li>Spirituality</li>
+        <li>Experimental</li>
+        <li>People</li>
+        <li>Health</li>
+      </ul>
+    </div>
+  </div>
+  <div class="Bigimg">
+    <img src="./images/Bigimg.jpg" alt="">
+    <div class="center">
+      <span class="unsplash">Unsplash</span>
+      <div>
+        <h1>The internet’s source of freely usable images.</h1>
+        <p>Powered by creators everywhere.</p>
+        <div class="input-s"></div>
+      </div>
+      <div class="center-search">
+        <button>
+          <svg class="_2-tlh _1azRR _1mPD6" version="1.1" viewBox="0 0 32 32" width="32" height="32"
+            aria-hidden="false">
+            <path
+              d="M31 28.64l-7.57-7.57a12.53 12.53 0 1 0-2.36 2.36l7.57 7.57zm-17.5-6a9.17 9.17 0 1 1 6.5-2.64 9.11 9.11 0 0 1-6.5 2.67z">
+            </path>
+          </svg>
+        </button>
+        <input type="text" placeholder="Search free high-resolution photos">
+      </div>
+      <span class="center-font">Trending: Flower, Wallpapers, Backgrounds, Happy, Love</span>
+    </div>
+    <div class="center-bottom">
+    <div class="center-b">
+        <div class="center-b-f">
+          <span>Photo of the Day</span>&nbsp;by&nbsp;<span>Mark Neal</span>
+        </div>
+        <div class="center-b-s">
+          Read more about the&nbsp;<span>Unsplash License</span>
+        </div>
+        <div class="center-b-t"></div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="Photos">
+    <div class="first">
+      <div class="f-box1">
+        <img class="f-img1" src="./images/t-img1.jpg" alt="">
+        <div class="instuction">
+          <img class="icon" src="./images/image1.jpg" alt="">
+          <div class="inst">
+            <a href="#" class="top">The Honest Company</a>
+            <a href="#" class="bottom">Made by parents, for parents.</a>
+          </div>
+        </div>
+      </div>
+      <div class="f-box2">
+        <img class="f-img2" src="./images/f-img2.jpg" alt="">
+      </div>
+      <div class="f-box3">
+        <img class="f-img3" src="./images/f-img3.jpg" alt="">
+      </div>
+      <div class="f-box1">
+        <img class="f-img1" src="./images/t-img1.jpg" alt="">
+        <div class="instuction">
+          <img class="icon" src="./images/image1.jpg" alt="">
+          <div class="inst">
+            <a href="#" class="top">The Honest Company</a>
+            <a href="#" class="bottom">Made by parents, for parents.</a>
+          </div>
+        </div>
+      </div>
+      <div class="f-box2">
+        <img class="f-img2" src="./images/f-img2.jpg" alt="">
+      </div>
+      <div class="f-box3">
+        <img class="f-img3" src="./images/f-img3.jpg" alt="">
+      </div>
+    </div>
+    <div class="second">
+      <div class="s-box1">
+        <img src="./images/s-img1.jpg" alt="">
+      </div>
+      <div class="s-box2">
+        <img class="s-img2" src="./images/s-img2.jpg" alt="">
+      </div>
+      <div class="s-box3">
+        <img class="s-img3" src="./images/s-img3.jpg" alt="">
+      </div>
+      <div class="s-box1">
+        <img src="./images/s-img1.jpg" alt="">
+      </div>
+      <div class="s-box2">
+        <img class="s-img2" src="./images/s-img2.jpg" alt="">
+      </div>
+      <div class="s-box3">
+        <img class="s-img3" src="./images/s-img3.jpg" alt="">
+      </div>
+    </div>
+    <div class="third">
+      <div class="t-box1">
+        <img class="t-img1" src="./images/t-img2.jpg" alt="">
+      </div>
+      <div class="t-box2">
+        <img class="t-img2" src="./images/t-img3.jpg" alt="">
+      </div>
+      <div class="t-box3">
+        <img class="t-img3" src="./images/f-img1.jpg" alt="">
+      </div>
+      <div class="t-box1">
+        <img class="t-img1" src="./images/t-img2.jpg" alt="">
+      </div>
+      <div class="t-box2">
+        <img class="t-img2" src="./images/t-img3.jpg" alt="">
+      </div>
+      <div class="t-box3">
+        <img class="t-img3" src="./images/f-img1.jpg" alt="">
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
